profile指定、ant.targetの削除、java.nioの使用に変更