@@ -1,36 +1,38 @@
 package io.sitoolkit.csv.app.domain.services;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
-import java.util.Arrays;
-import java.util.Optional;
+import java.util.stream.Stream;
 
 public class SqlStatementExecutor {
 
-  public void executeSqlStatement(Connection connection, File resFileDir) {
-    Optional.ofNullable(resFileDir.listFiles((dir, name) -> name.endsWith(".sql"))).stream()
-        .flatMap(Arrays::stream)
-        .forEach(sqlFile -> executeSqlFile(connection, sqlFile));
-  }
-
-  private void executeSqlFile(Connection connection, File sqlFile) {
-    try {
-      execute(connection, sqlFile);
-    } catch (IOException | SQLException e) {
-      e.printStackTrace();
-      throw new IllegalArgumentException();
+  public void executeSqlStatement(Connection connection, String resFileDirPath) throws IOException {
+    Path resFileDir = Paths.get(resFileDirPath);
+    try (Stream<Path> paths = Files.walk(resFileDir)) {
+      paths
+          .filter(Files::isRegularFile)
+          .filter(path -> path.toString().endsWith(".sql"))
+          .forEach(
+              sqlFile -> {
+                try {
+                  executeSqlFile(connection, sqlFile);
+                } catch (IOException | SQLException e) {
+                  throw new IllegalArgumentException(e);
+                }
+              });
     }
   }
 
-  private void execute(Connection connection, File sqlFile) throws IOException, SQLException {
-    String sql = new String(Files.readAllBytes(sqlFile.toPath()), StandardCharsets.UTF_8);
+  private void executeSqlFile(Connection connection, Path sqlFilePath)
+      throws IOException, SQLException {
+    String sql = Files.readString(sqlFilePath);
     if (sql.trim().isEmpty()) {
-      throw new SQLException("Invalid SQL file: " + sqlFile.getAbsolutePath());
+      throw new SQLException("Invalid SQL file: " + sqlFilePath);
     }
     try (Statement stmt = connection.createStatement()) {
       stmt.execute(sql);
